benchmarks/MACO_20252/02_222805/results_maco2_run1.txt
[Run 1] Running MACO on maco2.cnf 
  File "C:\Users\pcobr\Downloads\MACO\maco v2\macov6no-2-22-02-2025.py", line 1
    --- START OF FILE macov6no-2-22-02-2025.py ---
                                    ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
 
